--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "url": "git://github.com/rjrodger/nid.git"
   },
   "scripts": {
-    "test": "lab"
+    "test": "lab",
+    "coverage": "lab -s -r lcov | coveralls"
   },
   "keywords": [
     "random",
@@ -30,6 +31,7 @@
   ],
   "devDependencies": {
     "code": "^1.5.0",
+    "coveralls": "^2.11.6",
     "lab": "^6.2.0"
   }
 }
