--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,11 @@
-lib-cov
-*.seed
-*.log
-*.csv
-*.dat
-*.out
-*.pid
-*.gz
-
-pids
-logs
-results
-
-npm-debug.log
-
 *~
 .DS_Store
-
-
+test/db
+*.old
+*.bak
 node_modules
+README.html
+*.off
+*-off
+.DS_Store
+npm-debug.log
