--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,18 @@
 language: node_js
+sudo: false
+
 node_js:
-  - "13"
-  - "12"
-  - "10"
-  - "8"
+  - '14'
+  - '13'
+  - '12'
+  - '10'
+  - '8'
+
+
+install:
+  - node_version=$(node -v); if [ ${node_version:1:2} -ge 10 ]; then npm i -g npm@6; npm ci; else npm install; fi
+
+
+after_script:
+  - node_version=$(node -v); if [ ${node_version:1:2} -ge 10 ]; then npm audit; fi
+  - npm run coveralls
