--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nid",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Nice clean-mouthed random id generation, without any swearing!",
   "main": "nid.js",
   "browser": "dist/nid.min.js",
@@ -17,7 +17,8 @@
     "clean": "rm -rf node_modules yarn.lock package-lock.json",
     "reset": "npm run clean && npm i && npm test",
     "repo-tag": "REPO_VERSION=`node -e \"console.log(require('./package').version)\"`; echo TAG: v$REPO_VERSION && git commit -a -m v$REPO_VERSION && git push && git tag v$REPO_VERSION && git push --tags;",
-    "repo-publish": "npm run clean && npm i && npm run prettier && npm build && npm test && npm run test-web && npm run repo-tag && npm publish --registry http://registry.npmjs.org"
+    "repo-publish": "npm run clean && npm i && npm run repo-publish-quick",
+    "repo-publish-quick": "npm run prettier && npm build && npm test && npm run test-web && npm run repo-tag && npm publish --registry http://registry.npmjs.org"
   },
   "keywords": [
     "random",
