convert to ts for node

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,29 @@
-*~
-.DS_Store
-test/db
-*.old
-*.bak
-node_modules
-README.html
-*.off
-*-off
-.DS_Store
+lib-cov
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+
+pids
+logs
+results
+
 npm-debug.log
+
+*~
+node_modules
+
+.idea/
+
+
+trial
+
+test/coverage.html
+
+coverage
+
+package-lock.json
+yarn.lock
