--- a/package.json
+++ b/package.json
@@ -3,23 +3,10 @@
   "version": "1.3.3",
   "description": "Nice clean-mouthed random id generation, without any swearing!",
   "main": "nid.js",
-  "browser": "dist/nid.min.js",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/rjrodger/nid.git"
-  },
-  "scripts": {
-    "test": "lab -v -L -P test -t 80 -I document -r console -o stdout -r html -o test/coverage.html",
-    "test-web": "browserify -o test-web/test-web.js -e test/nid.test.js -s Nid -im -i assert -i @hapi/lab && open test-web/index.html",
-    "build": "cp nid.js dist/nid.min.js && browserify -o dist/nid.min.js -e nid.js -s Nid -im -i assert -p tinyify",
-    "coveralls": "lab -s -P test -r lcov | coveralls",
-    "prettier": "prettier --write --no-semi --single-quote nid.js test/*.js",
-    "clean": "rm -rf node_modules yarn.lock package-lock.json",
-    "reset": "npm run clean && npm i && npm test",
-    "repo-tag": "REPO_VERSION=`node -e \"console.log(require('./package').version)\"`; echo TAG: v$REPO_VERSION && git commit -a -m v$REPO_VERSION && git push && git tag v$REPO_VERSION && git push --tags;",
-    "repo-publish": "npm run clean && npm i && npm run repo-publish-quick",
-    "repo-publish-quick": "npm run prettier && npm run build && npm test && npm run test-web && npm run repo-tag && npm publish --registry http://registry.npmjs.org"
-  },
+  "browser": "nid.min.js",
+  "type": "commonjs",
+  "types": "nid.d.ts",
+  "homepage": "https://github.com/rjrodger/nid",
   "keywords": [
     "random",
     "unique",
@@ -31,20 +18,47 @@
     "swear",
     "curse"
   ],
-  "author": "Richard Rodger (@rjrodger)",
+  "author": "Richard Rodger (http://richardrodger.com)",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/rjrodger/nid.git"
+  },
+  "scripts": {
+    "test": "npm run version && jest --coverage",
+    "test-pure": "npm run version && jest --coverage --config jest.config.pure.js",
+    "test-some": "npm run version && jest -t",
+    "test-some-pure": "npm run version && jest --config jest.config.pure.js -t",
+    "test-watch": "npm run version && jest --coverage --watchAll",
+    "test-web": "npm run build && npm run build-web && browserify -i util -o test/web.js -e test/entry.js -im && open test/web.html",
+    "watch": "npm run version && tsc -w -d",
+    "build": "npm run version && tsc -d",
+    "build-web": "cp nid.js nid.min.js && browserify -i util -o nid.min.js -e nid.web.js -s Nid -im -p tinyify",
+    "version": "node -r fs -e \"v=require('./package.json').version;s=fs.readFileSync('./nid.ts').toString().replace(/VERSION = '.*?'/,'VERSION = \\''+v+'\\'');fs.writeFileSync('./nid.ts',s)\"",
+    "clean": "rm -rf node_modules yarn.lock package-lock.json",
+    "reset": "npm run clean && npm i && npm run build && npm test",
+    "repo-tag": "REPO_VERSION=`node -e \"console.log(require('./package').version)\"` && echo TAG: v$REPO_VERSION && git commit -a -m v$REPO_VERSION && git push && git tag v$REPO_VERSION && git push --tags;",
+    "repo-publish": "npm run clean && npm i && npm run repo-publish-quick",
+    "repo-publish-quick": "npm run build && npm run test && npm run build-web && npm run test-web && npm run repo-tag && npm publish --access public --registry https://registry.npmjs.org "
+  },
   "license": "MIT",
+  "engines": {
+    "node": ">=12"
+  },
   "files": [
-    "README.md",
-    "LICENSE.txt",
-    "nid.js",
-    "dist/nid.min.js"
+    "*.js",
+    "*.map",
+    "*.ts",
+    "LICENSE",
+    "README.md"
   ],
   "devDependencies": {
-    "@hapi/code": "^8.0.2",
-    "@hapi/lab": "^23.0.0",
-    "browserify": "^16.5.2",
-    "coveralls": "^3.1.0",
-    "prettier": "^2.1.2",
-    "tinyify": "^3.0.0"
+    "@types/jest": "^27.4.1",
+    "browserify": "^17.0.0",
+    "esbuild": "^0.14.36",
+    "esbuild-jest": "^0.5.0",
+    "jest": "^27.5.1",
+    "tinyify": "^3.0.0",
+    "ts-jest": "^27.1.4",
+    "typescript": "^4.6.3"
   }
 }
