--- a/package.json
+++ b/package.json
@@ -24,16 +24,15 @@
     "url": "git://github.com/rjrodger/nid.git"
   },
   "scripts": {
-    "test": "npm run version && jest --coverage",
-    "test-pure": "npm run version && jest --coverage --config jest.config.pure.js",
-    "test-some": "npm run version && jest -t",
-    "test-some-pure": "npm run version && jest --config jest.config.pure.js -t",
-    "test-watch": "npm run version && jest --coverage --watchAll",
+    "test": "jest --coverage",
+    "test-pure": "jest --coverage --config jest.config.pure.js",
+    "test-some": "jest -t",
+    "test-some-pure": "jest --config jest.config.pure.js -t",
+    "test-watch": "jest --coverage --watchAll",
     "test-web": "npm run build && npm run build-web && browserify -i util -o test/web.js -e test/entry.js -im && open test/web.html",
-    "watch": "npm run version && tsc -w -d",
-    "build": "npm run version && tsc -d",
+    "watch": "tsc -w -d",
+    "build": "tsc -d",
     "build-web": "cp nid.js nid.min.js && browserify -i util -o nid.min.js -e nid.web.js -s Nid -im -p tinyify",
-    "version": "node -r fs -e \"v=require('./package.json').version;s=fs.readFileSync('./nid.ts').toString().replace(/VERSION = '.*?'/,'VERSION = \\''+v+'\\'');fs.writeFileSync('./nid.ts',s)\"",
     "clean": "rm -rf node_modules yarn.lock package-lock.json",
     "reset": "npm run clean && npm i && npm run build && npm test",
     "repo-tag": "REPO_VERSION=`node -e \"console.log(require('./package').version)\"` && echo TAG: v$REPO_VERSION && git commit -a -m v$REPO_VERSION && git push && git tag v$REPO_VERSION && git push --tags;",
